feat: Add line numbers to code blocks

--- a/book.toml
+++ b/book.toml
@@ -9,3 +9,4 @@ edition = "2024"
 
 [output.html]
 additional-css = ["theme/css/var_overwrite.css", "theme/css/class_overwrite.css"]
+additional-js = ["theme/js/highlightjs-line-numbers.min.js"]
